# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX
* Tabellen um eine Hilfsmethode erweitert, mit der man eine Spalte über den Namen finden kann

## [12.66.2] -- 2023-09-26
* Dependabot beobachtet nun neben Maven POMs und GitHub Actions auch Container Images
* Eweitern der Doku zur benutzerspezifischen MDI-Erstellung.
* Auslesen der LDAP User Tokens korrigieren. Zuvor entstand ein Fehler, da es sich um eine ImmutableList handelte.

## [12.66.1] -- 2023-09-21
* final für dataSource in SecurityConfig von Service wiederhergestellt.
* Authority-Spaltengröße muss dieselbe Größe haben wie die KeyText-Spalte in xtcasUserGroup.

## [12.66.0] -- 2023-09-12
* Bestimmung der erlaubten CORS-Origins direkt über URLs statt Profiles
* InfoLogger zum Loggen allgemeiner Informationen hinzufügen. 
* Das KeyText-Feld der Data-Entity hat nun die Länge von 200, da UserPrivilege diese Länge benötigt. Außerdem wurde das Desciption Feld bei der UserPrivilege-Entity ergänzt.  

## [12.65.19] -- 2023-09-06
* jgrapht-core Abhängigkeit für das Submodul 'setup' bereitstellen. (Startet man CAS im IntelliJ und möchte DBsetup ausführen, wird kein Fehler wegen fehlender JGraphT Klasse geworfen.)

## [12.65.18] -- 2023-08-29
* Update auf SpringBoot 3.1.3
* jackson-datatype-jsr310, hibernate-jpamodelgen, commons-lang3 Abhängigkeiten für Erweiterungen bereitstellen.

## [12.65.17] -- 2023-08-21
* Unique Key aus xtcasUserPrivilege entfernen, da es bei Azure Datenbanken zu Fehlern führt.

## [12.65.16] -- 2023-08-10
* Fehler in CAS Masken korrigeren. 

## [12.65.15] -- 2023-08-04
* Fehler in Prozedur xpcasInsertServiceMessage korrigieren.

## [12.65.14] -- 2023-08-04
* Zurückgezogene AWS bom Version zurücksetzen

## [12.65.13] -- 2023-08-04
* Fehlender KeyText in Masken und Prozeduren ergänzen. 

## [12.65.12] -- 2023-08-04