@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cas.app</artifactId>
-	<version>12.66.3-SNAPSHOT</version>
+	<version>12.66.4-SNAPSHOT</version>
 	<parent>
 		<groupId>aero.minova</groupId>
 		<artifactId>app.parent</artifactId>
