@@ -6,7 +6,7 @@
     <parent>
         <groupId>aero.minova</groupId>
         <artifactId>cas.parent</artifactId>
-        <version>12.66.3-SNAPSHOT</version>
+        <version>12.66.4-SNAPSHOT</version>
     </parent>
 
     <dependencies>
